crates/batchalign/batchalign-cli/tests/ml_golden/snapshots/ml_golden__ml_golden__utseg__golden__utseg_eng_multi_utt.snap
---
source: crates/batchalign-app/tests/ml_golden/utseg/golden.rs
expression: "&results[0].content"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	PAR Participant
@ID:	eng|test|PAR|||||Participant|||
*PAR:	the dog is running .
*PAR:	I like cats .
*PAR:	she went to the store .
@End
