crates/batchalign/batchalign-cli/tests/ml_golden/snapshots/ml_golden__ml_golden__utseg__golden__utseg_spa.snap
---
source: crates/batchalign-app/tests/ml_golden/utseg/golden.rs
expression: "&results[0].content"
---
@UTF8
@Begin
@Languages:	spa
@Participants:	PAR Participant
@ID:	spa|test|PAR|||||Participant|||
*PAR:	el perro corre .
*PAR:	me gustan los gatos .
@End
